# Ring-GSW-Bootstrapping

./: CMakeLists.txt  Makefile
demo/: demo-EvalMult.cpp  demo-ILWE.cpp  demo-ISLWE.cpp  demo-autoMorphism.cpp  demo-automorphism2.cpp  demo-automorphism3.cpp  demo-boot1.cpp  demo-boot2.cpp  demo-boot3.cpp  demo-boot4.cpp  demo-bootstrap-auto.cpp  demo-bootstrap-rgsw.cpp  demo-checkCircular.cpp  demo-gridstrapping-wo-carry.cpp  demo-gridstrapping.cpp  demo-idea.cpp  demo-masking.cpp  demo-rgsw-keySwitch.cpp  demo-ringgsw.cpp  parameters
src/: CMakeLists.txt  CryptoNode.h  CryptoTree.cpp  CryptoTree.h  ILWEOps.cpp  ILWEOps.h  ISLWE.cpp  ISLWE.h  RingGSWOPS.cpp  RingGSWOPS.h  gsw-impl.cpp  integerlwedefs.cpp  integerlwedefs.h  ringgsw.cpp  ringgsw.h
